--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a class="fab fa-linkedin" href="https://www.linkedin.com/in/julian-sirkin/" target="_blank" id="linkedin"></a>
               </li>
               <li class="list-inline-item">
-                <a href="pictures/Julian_Sirkin_Resume.pdf" class="fas fa-file" id="resume" download target="_blank"></a>
+                <a href="pictures/Julian Web developer_mike.pdf" class="fas fa-file" id="resume" download target="_blank"></a>
               </li>
             </ul>
         </div>
