--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <!-- Sidebar -->
         <div id="sidebar" class="col-md-3 col-lg-2 float-md-left sidebar pb-2">
           <div class="sidebar-header pb-2 pt-4">
-            <img src="https://scontent.fbed1-1.fna.fbcdn.net/v/t1.0-9/29261949_10211212532649363_8991608884233764864_n.jpg?_nc_cat=0&oh=6764d209ad49603d3116d93b35783a23&oe=5C315437" class="profile-img col-8 mb-3 offset-2">
             <h3 class="name col-12 text-center">
                   Julian Sirkin
                 </h3>
@@ -37,7 +36,7 @@
                 <a class="fab fa-linkedin" href="https://www.linkedin.com/in/julian-sirkin/" target="_blank" id="linkedin"></a>
               </li>
               <li class="list-inline-item">
-                <a href="pictures/Julian Web developer_mike.pdf" class="fas fa-file" id="resume" download target="_blank"></a>
+                <a href="pictures/Julian.Sirkin.Resume.pdf" class="fas fa-file" id="resume" download target="_blank"></a>
               </li>
             </ul>
         </div>
